--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			</div>
 			<div class="col-lg-3">
 				<div class="service-item mb-5 mb-lg-0" data-aos="fade-left"  data-aos-delay="750">
-					<img src="images/icons/python.png" alt="">
+					<img src="images/icons/Python.png" alt="">
 				</div>
 			</div>
 			<div class="col-lg-3">
