--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
 				<div class="widget footer-widget text-lg-right mt-5 mt-lg-0">
 					<ul class="list-inline mb-0">
 						<li class="list-inline-item"><a href="https://github.com/vasanthakumar-a/" target="_blank"><i class="ti-github mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://twitter.com/vasanthakumar-a/" target="_blank"><i class="ti-twitter mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://twitter.com/vasanth_117/" target="_blank"><i class="ti-twitter mr-3"></i></a></li>
 						<li class="list-inline-item"><a href="https://www.linkedin.com/in/vasanthakumar-a/" target="_blank"><i class="ti-linkedin mr-3"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.instagram.com/vasanthakumar-a/" target="_blank"><i class="ti-instagram mr-3"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.instagram.com/vasanthakumar_117/" target="_blank"><i class="ti-instagram mr-3"></i></a></li>
 					</ul>
 				</div>
 			</div>
